--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Have you found yourself stressed after a long day of work or are looking for an active way to start your morning without having to hit the gym? Yoga is an amazing activity to activate the mind and body before taking on the day, and this page will give you some helpful advice to incorporating yoga into your daily life!</p>
 
           </div>
 
