--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Have your yoga gear ready to go.</h3>
+              <p>If you want to practice yoga every day, always have your yoga gear ready to practice at home or in the studio. This can help prevent you from finding excuses to not practice daily.</p> 
             </div>
           </li>
 
