--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Decide when and how long you want to practice.</h3>
+              <p>Some people find that keeping to a routine of the same time and the same place each day is most beneficial. Your mind and your body will associate that time and place with yoga sessions, which can serve as great internal motivation. Be sure to pick a time when you know there will be no interruptions or distractions, such as early in the morning or late at night.</p>
 
               <!--
 This block contains a photo and has a caption.
