--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
+              <li>Yoga mat</li>
+              <li>Full body towel (if in a hot environment)</li>
+              <li>Face towel</li>
+              <li>Yoga blocks</li>
               <li>Water</li>
+              <li>Self-love</li>
             </ul>
           </aside>
         </div>
