--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Designate time for yourself every day.</h3>
+              <p>Set a specific time for your yoga practice every day. Make sure all that electronics are turned off or unplugged, no one is coming over, and everyone in your household is either not home or otherwise occupied. Let others know that your yoga practice should not be disturbed except in an emergency.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
