--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Find a comfortable place to practice.</h3>
+              <p>You can try yoga at home or in a professional studio. Either way, it’s important to find a designated space so that you can comfortably and easily dedicate yourself to your daily practice.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Expect gradual improvement.</h3>
+              <p>TDaily practice will start to flow through in evident changes in your life, but it won't happen immediately. Sometimes you might feel as though you’re not progressing at all. Give it time and suddenly you may realize that your daily practice is beneficial and having a positive impact on the rest of your day.</p> 
             </div>
           </li>
 
