--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Expect gradual improvement.</h3>
-              <p>TDaily practice will start to flow through in evident changes in your life, but it won't happen immediately. Sometimes you might feel as though you’re not progressing at all. Give it time and suddenly you may realize that your daily practice is beneficial and having a positive impact on the rest of your day.</p> 
+              <p>Daily practice will start to flow through in evident changes in your life, but it won't happen immediately. Sometimes you might feel as though you’re not progressing at all. Give it time and suddenly you may realize that your daily practice is beneficial and having a positive impact on the rest of your day.</p> 
             </div>
           </li>
 
