--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Practice-Yoga-Daily" title="How to Practice Yoga Daily - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="https://flic.kr/p/gyHtG" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images are by <a href="https://flic.kr/p/gyHtG" title="Yoga by Jamie Qi Zhou, on Flickr">Jamie Qi Zhou from Flickr</a></p>
     </footer>
 
     <!--
