--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ with a paragraph to create a photo with a caption.
               <p>Set a specific time for your yoga practice every day. Make sure all that electronics are turned off or unplugged, no one is coming over, and everyone in your household is either not home or otherwise occupied. Let others know that your yoga practice should not be disturbed except in an emergency.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/nWLTtdfhif8" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/_8kV4FHSdNA" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
