--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a href="https://www.flickr.com/photos/3187003/176130554" title="Yoga by Jamie Qi Zhou, on Flickr"><img alt="The Yoga-Room" height="%" width="%" src="https://live.staticflickr.com/44/176130554_22149b752f_c.jpg" ></a>
+              <p class="caption">Many people choose to receive yoga instruction via class settings, but Youtube always exists for people who would rather learn at home!</p>
             </div>
           </li>
 
