--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to become an awesome yogi.</h1>
+            <h1>How to become an awesome yogi amongst a busy schedule.</h1>
 
             <hr>
-            <p><b>Assembly time:</b> Every day!<br>
+            <p><b>Practice time:</b> Every (available) day!<br>
               <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
