--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#80B0F8;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#D4DDCB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -278,7 +278,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #D5E5FD;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #F6D2D2;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
@@ -305,7 +305,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #A8BC97;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #E37778;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
